objects/ASI_CRM_Price_And_Discount__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimated_annual_order_amount__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Estimated_annual_order_amount__c</formula>
        <label>Estimated Annual Order Amount in CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Gross_Sales_Impact__c</fullName>
        <label>Total Gross Sales Impact</label>
        <summarizedField>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_CN_Gross_Sales_Impact_RollUp__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_Price_And_Discount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_New_Price__c</fullName>
        <label>Total New Price</label>
        <summarizedField>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_New_Price_BT_with_VAT__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Price_And_Discount_Detail__c.ASI_CRM_Price_And_Discount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Channel_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Region__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_To__c</fullName>
        <defaultValue>DATE(2050,12,31)</defaultValue>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_IHBR_Price_Type__c</fullName>
        <label>IHBR Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Price</fullName>
                </value>
                <value>
                    <fullName>Promotion Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Master_Reference_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Master Reference Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Repacking Price Request, CN Repacking Price Request RO</value>
            </filterItems>
            <filterItems>
                <field>ASI_CN_NPL_Item_Master__c.ASI_CN_NPL_Item_Master_Type__c</field>
                <operation>equals</operation>
                <value>Repack</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN NPL T1 Price Request, CN NPL T1 Price Request RO</value>
            </filterItems>
            <filterItems>
                <field>ASI_CN_NPL_Item_Master__c.ASI_CN_NPL_Item_Master_Type__c</field>
                <operation>equals</operation>
                <value>NPL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CN_NPL_Item_Master__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Code__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_NPL_Reference_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPL Reference Number</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>Price And Discounts</relationshipLabel>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ReasonForThePriceIsLowerThanT1__c</fullName>
        <label>Reason For The Price Is Lower Than T1:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reason_for_Investment__c</fullName>
        <label>Reason for Investment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <inlineHelpText>请使用英语填写价格申请的原因以及目的</inlineHelpText>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending for BO to PRCSW Pirce</fullName>
                </value>
                <value>
                    <fullName>Pending for PRCSW to PRC Price</fullName>
                </value>
                <value>
                    <fullName>Pending for T1 Price</fullName>
                </value>
                <value>
                    <fullName>Pending for add to order form</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_And_Discounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_And_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_And_Discounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPL T1 Price Request</fullName>
                </value>
                <value>
                    <fullName>Repacking Price Request</fullName>
                </value>
                <value>
                    <fullName>T1 Price Adjustment Request</fullName>
                </value>
                <value>
                    <fullName>Customer Price and Discount Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Based_Mechanics__c</fullName>
        <label>Volume Based Mechanics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volume Based</label>
        <type>Checkbox</type>
    </fields>
    <label>Price And Discount</label>
    <listViews>
        <fullName>ASI_CRM_CN_Customer_Pending_for_T1_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_Customer_Price_and_Discount_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for T1 Price,Approved</value>
        </filters>
        <label>Customer - Pending for T1 Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Pending_for_BO_to_PRCSW_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_NPL_T1_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for BO to PRCSW Pirce</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/11/2015 12:00 AM</value>
        </filters>
        <label>NP 1. Pending for BO to PRCSW Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Pending_for_PRCSW_to_PRC_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_NPL_T1_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for PRCSW to PRC Price</value>
        </filters>
        <label>NP 2. Pending for PRCSW to PRC Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Pending_for_T1_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_NPL_T1_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for T1 Price</value>
        </filters>
        <label>NP 3. Pending for T1 Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Pending_for_add_to_order_form</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_NPL_T1_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for add to order form</value>
        </filters>
        <label>NP 4. Pending for add to order form</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Repacking_Pending_for_T1_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_Repacking_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for T1 Price</value>
        </filters>
        <label>Repack 1. Pending for T1 Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Repacking_Pending_for_add_to_order_form</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_Repacking_Price_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for add to order form</value>
        </filters>
        <label>Repack 2. Pending for Order Form</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_T1_Price_Adjust_Pending_T1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_T1_Price_Adjustment_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending for T1 Price</value>
        </filters>
        <label>T1 Price Adjust - Pending for T1 Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Repack_price_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_From__c</columns>
        <columns>ASI_CRM_Effective_To__c</columns>
        <columns>ASI_CRM_Item_Master_Reference_Number__c</columns>
        <columns>ASI_CRM_NPL_Reference_Number__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Price_And_Discount__c.ASI_CRM_CN_Repacking_Price_Request_RO</value>
        </filters>
        <label>Repack price All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Price and Discount Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price And Discounts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Customer_Price_and_Discount_Request</fullName>
        <active>true</active>
        <label>CN Customer Price and Discount Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Customer_Price_and_Discount_Request_RO</fullName>
        <active>true</active>
        <label>CN Customer Price and Discount Request RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_NPL_T1_Price_Request</fullName>
        <active>true</active>
        <label>CN NPL T1 Price Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_NPL_T1_Price_Request_RO</fullName>
        <active>true</active>
        <label>CN NPL T1 Price Request RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Repacking_Price_Request</fullName>
        <active>true</active>
        <label>CN Repacking Price Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Repacking_Price_Request_RO</fullName>
        <active>true</active>
        <label>CN Repacking Price Request RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_T1_Price_Adjustment_Request</fullName>
        <active>true</active>
        <label>CN T1 Price Adjustment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_T1_Price_Adjustment_Request_RO</fullName>
        <active>true</active>
        <label>CN T1 Price Adjustment Request RO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_Effective_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;) &amp;&amp; RecordType.DeveloperName  &lt;&gt; &quot;ASI_CRM_CN_NPL_T1_Price_Request_RO&quot; &amp;&amp; RecordType.DeveloperName  &lt;&gt; &quot;ASI_CRM_CN_NPL_T1_Price_Request&quot; &amp;&amp; ASI_CRM_Effective_From__c &gt; ASI_CRM_Effective_To__c , TRUE, FALSE )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Effective_From__c</errorDisplayField>
        <errorMessage>Efftective From can&apos;t be greater than Effective To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Effective_Date_Validation_2</fullName>
        <active>false</active>
        <errorConditionFormula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;)  &amp;&amp; RecordType.DeveloperName  &lt;&gt; &quot;ASI_CRM_CN_NPL_T1_Price_Request_RO&quot; &amp;&amp; RecordType.DeveloperName  &lt;&gt; &quot;ASI_CRM_CN_NPL_T1_Price_Request&quot; &amp;&amp; ASI_CRM_Effective_From__c &lt;= TODAY() &amp;&amp; ISPICKVAL( ASI_CRM_Status__c, &quot;Open&quot;), TRUE, FALSE )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Effective_From__c</errorDisplayField>
        <errorMessage>Effective From must be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Effective_Date_Validation_3</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName  == &quot;ASI_CRM_CN_NPL_T1_Price_Request_RO&quot; &amp;&amp; RecordType.DeveloperName == &quot;ASI_CRM_CN_NPL_T1_Price_Request&quot; &amp;&amp; ASI_CRM_Effective_From__c &lt; TODAY(), TRUE, FALSE )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Effective_From__c</errorDisplayField>
        <errorMessage>Effective From must be equal or greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_checkReason</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(CONTAINS($Profile.Name,&quot;System Admin&quot;))
&amp;&amp;CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_CN_Customer_Price_and_Discount_Request&apos;)
&amp;&amp;CONTAINS(ASI_CRM_Customer__r.RecordType.DeveloperName,&apos;ASI_CRM_Outlet_CN&apos;)
&amp;&amp;ASI_CRM_CN_Total_Gross_Sales_Impact__c &gt; 0
&amp;&amp;(ISNULL(ASI_CRM_Reason_for_Investment__c)||ISBLANK(ASI_CRM_Reason_for_Investment__c)||ISNULL(ASI_CRM_ReasonForThePriceIsLowerThanT1__c)||ISBLANK(ASI_CRM_ReasonForThePriceIsLowerThanT1__c))</errorConditionFormula>
        <errorMessage>Please input “Reason for Investment” and “Reason For The Price Is Lower Than T1:”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_of_JDE_Code</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_CN_Customer_Price_and_Discount_Request&apos;) &amp;&amp; ( ( NOT( ASI_CRM_RTD__c ) &amp;&amp; ISBLANK( ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code__c ) ) || ( ASI_CRM_RTD__c &amp;&amp; ISBLANK( ASI_CRM_Customer__r.ASI_CRM_CN_JDE_Code_RTD__c ) ) )</errorConditionFormula>
        <errorMessage>Customer JDE Code can not be NULL</errorMessage>
    </validationRules>
</CustomObject>